<resources>
    <string name="app_name">My Application</string>
    <string name="homework6">HW6 </string>
    <string name="poland">Poland!</string>
    <string name="germany">Germany!</string>
    <string name="france">France!</string>
    <string name="latvia">Latvia!</string>
    <string name="finland">Finland!</string>
    <string name="homework7">HW7 </string>/>
    <string name="enter_password">Enter your password</string>
    <string name="enter_login">Enter your login</string>
    <string name="click">Click</string>
    <string name="about_user">About user:</string>
    <string name="click_on_button">Click on button</string>
    <string name="login">Login: </string>
    <string name="password">Password: </string>
    <string name="close">close</string>
    <string name="homework10">HW10 </string>
    <string name="homework12">HW12 </string>
    <string name="nextFragment"> Next Fragment </string>
    <string name="first_fragment"> First Fragment </string>
    <string name="second_fragment"> Second Fragment </string>
    <string name="third_fragment"> Third Fragment </string>
    <string name="fourth_fragment"> Fourth Fragment </string>
    <string name="fifth_fragment"> Fifth Fragment </string>
    <string name="homework13">HW13 </string>
    <string name="homework16">HW16</string>
    <string name="message">Enter your message</string>
    <string name="homework17">HW17</string>
    <string name="hint_id">id</string>
    <string name="hint_name">name</string>
    <string name="hind_symbol">symbol</string>
    <string name="hint_count">Введите число</string>
    <string name="Start">Start</string>
    <string name="homework19">HW19</string>
    <string name="homework20">HW20</string>
    <string name="_08_45_pm">08 : 45 PM</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set Alarm</string>
    />

</resources>