<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    tools:context=".homework7.Homework7Activity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/click_on_button"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/timer_text"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/login_edit"
        android:visibility="invisible"
        android:autofillHints="Login"
        android:inputType="text"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:hint="@string/enter_login"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/password_edit"
        android:visibility="invisible"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:hint="@string/enter_password"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/click"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button"/>

</LinearLayout>