<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework19.AlarmActivity">

    <TextView
        android:id="@+id/tv_selected_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/_08_45_pm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <Button
        android:id="@+id/btn_select_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_time"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_alarm"
        android:textSize="28sp" />

</LinearLayout>