<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poland"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/germany"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/red" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/gold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/france"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/red" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latvia"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@color/vinous" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@color/vinous" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finland"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/white" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
